samples/_failures_safe/1761226335_434346_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1a04334d.c: In function ‘parse_expression’:
./samples/SAFE/__tmp_1a04334d.c:160:17: error: expected expression at end of input
  160 |                 return
      |                 ^~~~~~
./samples/SAFE/__tmp_1a04334d.c:160:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1a04334d.c:160:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1a04334d.c:160:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1a04334d.c:160:17: error: expected declaration or statement at end of input
